# BOA-dataset-treatment

./: .gitignore  prepare_from_Xy.py  pyproject.toml  requirements.txt
data/: data.py
example/: example.ipynb  example_prepare_from_Xy.ipynb
mgs_grf/: __init__.py  continuous_oversampler.py  forest_for_categorical.py  over_sampling.py
protocols/: run_protocol-final.py
protocols/baselines/: baselines.py
protocols/notebooks/: res_real_data.ipynb
rtdl_revisiting_models/data/bankchurners/: C_test.npy  C_train.npy  C_trainval.npy  C_val.npy  N_test.npy  N_train.npy  N_trainval.npy  build_X__quantile__mean__new__indices__0.pickle  info.json  y_train.npy  y_trainval.npy
rtdl_revisiting_models/data/bankchurners_oversampled/: C_train.npy  C_trainval.npy  N_train.npy  N_trainval.npy  N_val.npy  build_X__quantile__mean__new__indices__0.pickle  info.json  y_test.npy  y_train.npy  y_trainval.npy  y_val.npy
rtdl_revisiting_models/data/california_housing/: build_X__quantile__mean__new__indices__0.pickle
rtdl_revisiting_models/lib/: data.py  deep.py  env.py
rtdl_revisiting_models/output/adult/ft_transformer/default/: 0.toml  1.toml
rtdl_revisiting_models/output/adult/sparse_ftt_plus/default/: 2.toml
rtdl_revisiting_models/output/bankchurners/catboost/tuning/: 0.toml
rtdl_revisiting_models/output/bankchurners/ft_transformer/tuning/: 0.toml
rtdl_revisiting_models/output/bankchurners/mlp/tuning/: 0.toml  (+1 more)
rtdl_revisiting_models/scripts/: feature_importance_analysis.py
sparse_ftt_plus/: __init__.py  attention.py  model.py
validation/: classif_experiments.py
(+23 files in other folders)
